# git-big

./: .appveyor.yml  .exclude  .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  Pipfile  README.md  configure  git-big-windows-setup  git-big-windows-setup.py  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py  tox.ini
git_big/: __init__.py  filter.py  fix_progressbar.py  main.py  singleton.py  storage.py  windows.py  windows_setup.py
tests/: conftest.py  test_add.py  test_bare.py  test_cp.py  test_gitdir.py  test_init.py  test_mv.py  test_pull.py  test_push.py  test_rm.py  test_unlock.py  test_worktree.py
