# Copyright (c) 2018 Vertex.AI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = git-big
version = attr: git_big.__version__
description = Git Big is a command line extension to Git for managing Write Once Read Many (WORM) files.
license = Apache 2.0
author = Vertex.AI
url = https://github.com/vertexai/git-big
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[options]
packages = git_big
install_requires =
  apache-libcloud==1.5.0
  boto
  click
  lockfile
  progressbar2
  jaraco.windows;platform_system=="Windows"
  pywin32;platform_system=="Windows"

[options.entry_points]
console_scripts =
  git-big = git_big.main:cli
  git-big-windows-setup = git_big.windows_setup:cli
